--- a/Awesome_Swift/Sections/Login/AWLoginViewController.xib
+++ b/Awesome_Swift/Sections/Login/AWLoginViewController.xib
@@ -18,15 +18,28 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="登录页面" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O9p-2L-b0E">
-                    <rect key="frame" x="125" y="173" width="70" height="21"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RB5-4f-LPo">
+                    <rect key="frame" x="145" y="209" width="31" height="30"/>
+                    <state key="normal" title="登录"/>
+                    <connections>
+                        <action selector="handleLoginAction" destination="-1" eventType="touchUpInside" id="gTR-oh-XMD"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CG2-QS-KLg">
+                    <rect key="frame" x="240" y="20" width="60" height="30"/>
+                    <state key="normal" title="切换URL"/>
+                    <connections>
+                        <action selector="handleURLAction" destination="-1" eventType="touchUpInside" id="Oy8-g9-zfV"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <constraints>
+                <constraint firstItem="CG2-QS-KLg" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="20" id="NPh-dp-rLg"/>
+                <constraint firstItem="RB5-4f-LPo" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="209" id="Og7-4w-WIF"/>
+                <constraint firstItem="RB5-4f-LPo" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="V3U-h2-74E"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="CG2-QS-KLg" secondAttribute="trailing" constant="20" id="mE6-Pp-O8a"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="132" y="132"/>
         </view>
